#51 indicate mandatory application documents

--- a/synapsis/src/main/resources/templates/pages/createJob.html
+++ b/synapsis/src/main/resources/templates/pages/createJob.html
@@ -58,16 +58,12 @@
       <div class="border border-grey p-3 rounded-md hover:bg-light">
         <p class="text-grey font-serif">Indicate which documents are mandatory for this application</p>
         <fieldset class="font-serif text-grey">
-          <input type="checkbox" id="resume" value="Resume">
-          <label for="resume">Resume</label><br>
-          <input type="checkbox" id="coverLetter" value="CoverLetter">
-          <label for="coverLetter">Cover Letter</label><br>
-          <input type="checkbox" id="portfolio" value="Portfolio">
-          <label for="portfolio">Portfolio</label><br>
-          <input type="checkbox" id="transcript" value="Transcript">
-          <label for="transcript">Transcript</label><br>
-          <input type="checkbox" id="recommendation" value="RecommendationLetter">
-          <label for="recommendation">Recommendation Letter</label><br>
+          <input type="checkbox" name="needResume" id="needResume">
+          <label for="needResume">Resume</label><br>
+          <input type="checkbox" name= "needCover" id="needCover">
+          <label for="needCover">Cover Letter</label><br>
+          <input type="checkbox" name= "needPortfolio" id="needPortfolio">
+          <label for="needPortfolio">Portfolio</label><br>
         </fieldset>
       </div>
 
