--- a/synapsis/src/main/resources/templates/pages/job.html
+++ b/synapsis/src/main/resources/templates/pages/job.html
@@ -28,8 +28,9 @@
         </div>
         <div>
           <p class="font-bold">Mandatory Documents:</p>
-          <!--Hard-coded for now.-->
-          <p class="font-thin font-serif break-words">Resume, Cover Letter</p>
+          <p th:if="${need_resume}" class="font-thin font-serif break-words">Resume</p>
+          <p th:if="${need_cover}" class="font-thin font-serif break-words">Cover Letter</p>
+          <p th:if="${need_portfolio}" class="font-thin font-serif break-words">Portfolio</p>
         </div>
       </div>
 
@@ -48,7 +49,6 @@
         </div>
         <div>
           <p class="font-bold">Job Posting</p>
-          <!--Hard-coded for now-->
           <p th:if="${is_external}" class="font-thin font-serif break-words">External</p>
           <p th:if="${is_external}" th:text="${external_link}" class="font-serif"></p>
           <p th:if="${!is_external}" class="font-thin font-serif break-words">Internal</p>
