--- a/synapsis/src/main/resources/templates/pages/job.html
+++ b/synapsis/src/main/resources/templates/pages/job.html
@@ -65,8 +65,11 @@
 
     <div th:if="${role.toString()=='RECRUITER'}" class="mx-auto my-4 transition hover:-translate-y-0.5 duration-150 ">
     <!--Add link below. Only RECRUITERS can edit jobs.-->
-      <a th:if="${authorization.toString()=='true'}" class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
-            hover:bg-opacity-60">Edit</a>
+      <form th:action="@{/editjob}" th:if="${authorization}" method="get">
+        <input type="hidden" name="jid" th:value="${jid}" />
+        <button class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
+              hover:bg-opacity-60" type="submit">Edit</button>
+      </form>
       <form th:action="@{/deletejob}" th:if="${authorization}" method="post">
         <input type="hidden" name="jid" th:value="${jid}" />
         <button class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
