--- a/synapsis/src/main/resources/templates/pages/jobs.html
+++ b/synapsis/src/main/resources/templates/pages/jobs.html
@@ -22,7 +22,8 @@
           <div class="bg-light-blue mx-auto w-11/12 rounded-2xl text-xs mt-2">
             <div class="font-sans font-light p-2" th:text="${job.description}"></div>
             <p class="px-2">Salary: TBD</p>
-            <a th:href="@{/job/{id}(id=${job.getID()})}" class="inline-block px-4 py-2 underline">More details</a>
+            <a th:href="@{/job/{id}(id=${job.getID()})}" class="inline-block px-2 py-2 underline">More details</a>
+            <p class="px-2" th:if="${job.isExternal}">***APPLY BY WEBSITE***</p>
 
           </div>
 
