Minor code changes in script. May need to modify to accommodate entire site.
#46

--- a/synapsis/src/main/resources/templates/pages/home.html
+++ b/synapsis/src/main/resources/templates/pages/home.html
@@ -48,5 +48,7 @@
         <button class="lang langEN text-2xl w-1/3 btn btn-primary mt-8 ml-6 btn-primary">Find people you know.</button>
         <button class="lang langFR text-2xl w-1/3 btn btn-primary mt-8 ml-6 btn-primary">Trouvez des gens.</button>
     </div>
+    <p>Your browser language is: <b id="browserLang"></b></p>
+    <p>The selected language is: <b id="startLang"></b></p>
 </div>
 </html>
