--- a/synapsis/src/main/resources/templates/fragments/navbar.html
+++ b/synapsis/src/main/resources/templates/fragments/navbar.html
@@ -83,9 +83,9 @@
                                 group-hover:border-grey-light">
                                     Settings
                                 </div>
-                                <div class="items-center absolute border border-t-0 w-32 bg-neutral-100 rounded-lg invisible group-hover:visible">
-                                    <div class="text-center">Settings</div>
-                                    <div class="text-center">Language</div>
+                                <div class="absolute border border-t-0 w-32 bg-neutral-100 rounded-lg invisible group-hover:visible">
+                                    <div class="text-center"><i class="fa-solid fa-gear mr-3"></i>Settings</div>
+                                    <div class="text-center"><i class="fa-solid fa-globe mr-3"></i>Language</div>
                                     <hr class="border-t border-grey-light text-center">
                                     <form th:action="@{/logout}" method="post" class="text-center">
                                         <input type="submit" value="Log out"/>
