--- a/synapsis/src/main/resources/templates/pages/userpage.html
+++ b/synapsis/src/main/resources/templates/pages/userpage.html
@@ -37,6 +37,18 @@
                         </tr>
                     </table>
                 </div>
+                <form th:if="${!isConnectedWith and !isPendingConnectedWithSent and !isPendingConnectedWithReceived}" th:action="@{/connect}" method="post">
+                    <input type="hidden" name="id" th:value="${id}"/>
+                    <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Connect</button>
+                </form>
+
+                <button th:if="${isPendingConnectedWithSent}" class="btn bg-black btn-black font-sans text-sm w-25 h-9 p-0" disabled>Pending</button>
+
+                <form th:action="@{/connection/accept}" method="post">
+                    <input type="hidden" name="id" th:value="${id}" />
+                    <button th:if="${isPendingConnectedWithReceived}" class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Accept</button>
+                </form>
+
                 <form th:if="${isConnectedWith}" th:action="@{/disconnect}" method="post">
                     <input type="hidden" name="id" th:value="${id}"/>
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Disconnect
