--- a/synapsis/src/main/resources/templates/pages/chatPage.html
+++ b/synapsis/src/main/resources/templates/pages/chatPage.html
@@ -1,61 +1,51 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
-<div layout:fragment="content">
-    <p th:if="${chats.size() == 0}">Wow such empty!</p>
+    <div layout:fragment="content">
+        <p th:if="${chats.size() == 0}">Wow such empty!</p>
 
-    <!--    <div th:if="${chats.size() != 0}" th:each="chat: ${chats}">-->
-    <!--        <a th:href="@{/chat/{id}(id=${chat.id})}" class="flex">-->
-    <!--            <img class="w-[20px] h-[20px] rounded-t-2xl" src="/assets/default_user.svg">-->
-    <!--            <div>-->
-    <!--                <p th:text="${chat.creator.id == #authentication.principal.id ? chat.participant.name : chat.creator.name}"></p>-->
-    <!--            </div>-->
-    <!--        </a>-->
-    <!--    </div>-->
-
-
-    <!-- component -->
-    <!-- This is an example component -->
-    <div class="flex mb-28">
-        <div class="w-11/12 ml-16  shadow-lg rounded-lg  h-[25rem] ">
-
-            <!-- headaer -->
-            <div class="px-5 py-5 flex justify-between items-center bg-white border-b-2">
-                <div class="font-semibold text-2xl">
-                    Your Chat List
-                </div>
-            </div>
-            <!-- end header -->
+        <!--    <div th:if="${chats.size() != 0}" th:each="chat: ${chats}">-->
+        <!--        <a th:href="@{/chat/{id}(id=${chat.id})}" class="flex">-->
+        <!--            <img class="w-[20px] h-[20px] rounded-t-2xl" src="/assets/default_user.svg">-->
+        <!--            <div>-->
+        <!--                <p th:text="${chat.creator.id == #authentication.principal.id ? chat.participant.name : chat.creator.name}"></p>-->
+        <!--            </div>-->
+        <!--        </a>-->
+        <!--    </div>-->
 
 
-            <!-- Chatting -->
-            <div class="flex flex-row bg-white ">
-                <!-- chat list -->
-                <div class="flex flex-col w-1/3  border-r-2 overflow-y-auto">
-
-                    <!-- user list -->
-
-                    <div th:if="${chats.size() != 0}" th:each="chat: ${chats}"
-                         class="w-11/12 h-[8rem]  mt-5 ml-7 bg-neutral-100  border-gray-200 rounded-lg shadow">
-                        <a th:href="@{/chat/{id}(id=${chat.id})}" class="flex pl-8 pt-12">
-                            <img class=" w-[60px] h-[60px] rounded-t-2xl" src="/assets/default_user.svg">
-                            <div>
-                                <p th:text="${chat.creator.id == #authentication.principal.id ? chat.participant.name : chat.creator.name}"
-                                   class=" text-xl font-bold"></p>
-                            </div>
-                        </a>
+        <!-- component -->
+        <!-- This is an example component -->
+        <div class="container flex flex-wrap pb-28 mb-28">
+            <div class="w-11/12 ml-16 shadow-lg rounded-lg h-[25rem]">
+                <!-- header -->
+                <div class="px-5 py-5 flex justify-between items-center bg-white border-b-2">
+                    <div class="font-semibold text-2xl">
+                        Your Connections
                     </div>
                 </div>
-                <div class="w-2/3 ">
-                    <img class="h-auto max-w-full" src="/assets/messaging.png">
+                <!-- end header -->
+                <!-- Chatting -->
+                <div class="flex flex-row bg-white">
+                    <!-- chat list -->
+                    <div class="flex-none w-1/3 border-r-2">
+                        <!-- user list -->
+                        <div th:if="${chats.size() != 0}" th:each="chat: ${chats}"
+                             class="w-11/12 h-[8rem]  mt-5 ml-7 bg-neutral-100  border-gray-200 rounded-lg shadow">
+                            <a th:href="@{/chat/{id}(id=${chat.id})}" class="flex pl-8 pt-12">
+                                <img class=" w-[60px] h-[60px] rounded-t-2xl" src="/assets/default_user.svg">
+                                <div>
+                                    <p th:text="${chat.creator.id == #authentication.principal.id ? chat.participant.name : chat.creator.name}"
+                                       class=" text-xl font-bold"></p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="flex-none w-3/5">
+                        <img class="h-auto max-w-full" src="/assets/messaging.png">
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
-
-
-</div>
-
-
 </html>
