--- a/synapsis/src/main/resources/templates/pages/chatPage.html
+++ b/synapsis/src/main/resources/templates/pages/chatPage.html
@@ -2,20 +2,15 @@
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
     <div layout:fragment="content">
-        <p th:if="${chats.size() == 0}">Wow such empty!</p>
-
-        <!--    <div th:if="${chats.size() != 0}" th:each="chat: ${chats}">-->
-        <!--        <a th:href="@{/chat/{id}(id=${chat.id})}" class="flex">-->
-        <!--            <img class="w-[20px] h-[20px] rounded-t-2xl" src="/assets/default_user.svg">-->
-        <!--            <div>-->
-        <!--                <p th:text="${chat.creator.id == #authentication.principal.id ? chat.participant.name : chat.creator.name}"></p>-->
-        <!--            </div>-->
-        <!--        </a>-->
-        <!--    </div>-->
+        <!-- It will displayed if the user has no chat messages -->
+        <div th:if="${chats.size() == 0}">
+            <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
+                <span class="font-medium"></span> You don't have any chat messages
+            </div>
+        </div>
 
 
-        <!-- component -->
-        <!-- This is an example component -->
+        <!-- This will be displayed if they already have some chat messages -->
         <div class="container flex flex-wrap pb-28 mb-28">
             <div class="w-11/12 ml-16 shadow-lg rounded-lg h-[25rem]">
                 <!-- header -->
@@ -25,11 +20,9 @@
                     </div>
                 </div>
                 <!-- end header -->
-                <!-- Chatting -->
+
                 <div class="flex flex-row bg-white">
-                    <!-- chat list -->
                     <div class="flex-none w-1/3 border-r-2">
-                        <!-- user list -->
                         <div th:if="${chats.size() != 0}" th:each="chat: ${chats}"
                              class="w-11/12 h-[8rem]  mt-5 ml-7 bg-neutral-100  border-gray-200 rounded-lg shadow">
                             <a th:href="@{/chat/{id}(id=${chat.id})}" class="flex pl-8 pt-12">
@@ -41,6 +34,7 @@
                             </a>
                         </div>
                     </div>
+                    <!-- This image will be displayed before any chat starts with specific user -->
                     <div class="flex-none w-3/5">
                         <img class="h-auto max-w-full" src="/assets/messaging.png">
                     </div>
