--- a/synapsis/src/main/resources/templates/pages/userpage.html
+++ b/synapsis/src/main/resources/templates/pages/userpage.html
@@ -38,7 +38,7 @@
                     </table>
                 </div>
 
-                <form th:if="${!isConnectedWith and !isPendingConnectedWithSent and !isPendingConnectedWithReceived}" th:action="@{/connect}" method="post">
+                <form th:if="${!isConnectedWith and !isPendingConnectedWithSent and !isPendingConnectedWithReceived and !isLookingAtYourOwnProfilePage}" th:action="@{/connect}" method="post">
                     <input type="hidden" name="id" th:value="${id}"/>
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Connect</button>
                 </form>
