--- a/synapsis/src/main/resources/templates/pages/editJob.html
+++ b/synapsis/src/main/resources/templates/pages/editJob.html
@@ -4,7 +4,7 @@
 
   <form th:action="@{/editjob}" method="post">
 
-    <input type="hidden" name="jid" th:value="${jid}" />
+    <input type="hidden" name="jobId" th:value="${jobId}" />
 
     <p th:if="${param.error}">Invalid input.</p>
 
@@ -81,7 +81,7 @@
         transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Save
       </button>
 
-      <a th:href="'job/' + ${jid}" class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
+      <a th:href="'job/' + ${jobId}" class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
             hover:bg-opacity-60">Cancel</a>
 
     </div>
