#53 fixed bug withs submit button

--- a/synapsis/src/main/resources/templates/pages/editJob.html
+++ b/synapsis/src/main/resources/templates/pages/editJob.html
@@ -33,15 +33,15 @@
                 required></textarea>
 
       <label for="type" class="font-thin text-grey font-serif">Job Type</label>
-      <select id="type" name="type" th:field="*{type}" class="mt-2 bg-white border text-sm h-14 border-grey
+      <select id="type" name="type" class="mt-2 bg-white border text-sm h-14 border-grey
       text-grey rounded-md focus:border-blue-500 p-3 hover:bg-light" required>
-        <option th:value="'FULLTIME'">Full-time</option>
-        <option th:value="'PARTTIME'">Part-time</option>
-        <option th:value="'CONTRACT'">Contract</option>
-        <option th:value="'TEMPORARY'">Temporary</option>
-        <option th:value="'VOLUNTEER'">Volunteer</option>
-        <option th:value="'INTERNSHIP'">Internship</option>
-        <option th:value="'OTHER'">Other</option>
+        <option value="FULLTIME">Full-time</option>
+        <option value="PARTTIME">Part-time</option>
+        <option value="CONTRACT">Contract</option>
+        <option value="TEMPORARY">Temporary</option>
+        <option value="VOLUNTEER">Volunteer</option>
+        <option value="INTERNSHIP">Internship</option>
+        <option value="OTHER">Other</option>
       </select>
 
       <input id="numAvailable" name="numAvailable" type="number" th:value="${num_available}" min="1" placeholder="Available Positions"
