--- a/synapsis/src/main/resources/templates/pages/applicationSuccess.html
+++ b/synapsis/src/main/resources/templates/pages/applicationSuccess.html
@@ -4,8 +4,8 @@
 <div layout:fragment="content">
     <div class="flex flex-col items-center mx-auto border border-light p-6 rounded-md shadow-xl bg-light mt-10 w-80">
         <p class="text-xl font-serif font-bold text-center">You have successfully<br/>submitted your<br>application. </p>
-        <a th:href="@{/}" class="mt-3 bg-primary text-base mx-auto p-4 rounded-2xl font-thin
-            transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Return to Synapsis</a>
+        <a th:href="@{/jobs}" class="mt-3 bg-primary text-base mx-auto p-4 rounded-2xl font-thin
+            transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Return to Jobs Page</a>
     </div>
 </div>
 </html>
