--- a/synapsis/src/main/resources/templates/pages/job.html
+++ b/synapsis/src/main/resources/templates/pages/job.html
@@ -59,8 +59,13 @@
 
     <div th:if="${role.toString()=='CANDIDATE'}" class="mx-auto my-4 transition hover:-translate-y-0.5 duration-150 ">
       <!--Add link below-->
-      <a class="mb-4 bg-primary text-white mx-auto p-4 rounded-2xl font-thin
-            hover:bg-opacity-60">Apply Now at Synapsis</a>
+      <div th:if="${isJobSubmitted}">
+        <button class="inline-block px-4 py-2 text-white bg-red-900 rounded-full" disabled>Submitted</button>
+      </div>
+      <div th:unless="${isJobSubmitted}">
+        <a th:href="@{/jobapplication/{id}(id=${jobId})}" class="mb-4 bg-primary text-white mx-auto p-4 rounded-2xl font-thin hover:bg-opacity-60">Apply Now at Synapsis</a>
+      </div>
+<!--      <a th:href="@{/jobapplication/{id}(id=${jobId})}" class="mb-4 bg-primary text-white mx-auto p-4 rounded-2xl font-thin hover:bg-opacity-60">Apply Now at Synapsis</a>-->
     </div>
 
     <div th:if="${role.toString()=='RECRUITER'}" class="mx-auto my-4 transition hover:-translate-y-0.5 duration-150 ">
