--- a/synapsis/src/main/resources/templates/pages/jobApplicationForm.html
+++ b/synapsis/src/main/resources/templates/pages/jobApplicationForm.html
@@ -5,7 +5,7 @@
 
     <p th:if="${error}" th:text="${error}" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative"></p>
 
-    <form th:action="@{/jobapplication}" method="post">
+    <form th:action="@{/jobapplication}" method="post" enctype="multipart/form-data">
 
         <div class="flex flex-col border p-8 mx-auto mt-10 shadow-xl w-1/2 mb-20 rounded-sm">
 
