--- a/synapsis/src/main/resources/templates/pages/companypage.html
+++ b/synapsis/src/main/resources/templates/pages/companypage.html
@@ -8,6 +8,7 @@
                 <div class="img" id="profilePictureHolder">
                     <img class=" mt-3.5 rounded-full w-28 h-32   " src="../../assets/default_user.svg" alt="Default"/>
                 </div>
+                <!-- The profile of the company page is displayed with all details -->
                 <div class="p-5 ">
                     <h5 class="text-left text-2xl  font-bold tracking-tight text-gray-900 dark:text-white"
                         th:text="${name}"></h5>
