--- a/synapsis/src/main/resources/templates/pages/passwordResetForm.html
+++ b/synapsis/src/main/resources/templates/pages/passwordResetForm.html
@@ -5,6 +5,8 @@
 
 <div layout:fragment="content">
 
+    <!-- The password reset functionality in case the user forgets their password and he/she can't log in -->
+
     <form th:action="@{/passwordreset}" th:object="${registrationRequest}" method="post">
 
         <div class="relative flex flex-col border p-8 justify-center mx-auto mt-10 shadow-xl w-1/2 mb-20">
