--- a/synapsis/src/main/resources/templates/pages/updateuserpage.html
+++ b/synapsis/src/main/resources/templates/pages/updateuserpage.html
@@ -9,6 +9,8 @@
           method="post"
           enctype="multipart/form-data"
     >
+        <!-- The page that will be displayed in case user candidate or recruiter account user wants to edit their profile -->
+
         <div class="flex max-w-xl bg-neutral-100 border-gray-200 ml-28 rounded-lg shadow">
             <div class="p-5">
                 <label>Change Profile Picture</label>
