--- a/synapsis/src/main/resources/templates/pages/userpage.html
+++ b/synapsis/src/main/resources/templates/pages/userpage.html
@@ -197,6 +197,7 @@
             </div>
         </div>
 
+        <!-- In case the authenticated user is a recruiter then they can have the option of creating a job -->
         <div th:if="${showControls}">
         <div th:if="${role.toString() =='RECRUITER'}" class="w-1/2 mt-8 ml-80 ">
             <div class="flex max-w-md  bg-neutral-100 h-[11rem]  border-gray-200 rounded-lg shadow">
