--- a/synapsis/src/main/resources/templates/pages/applicationSuccess.html
+++ b/synapsis/src/main/resources/templates/pages/applicationSuccess.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="_layout">
 <div layout:fragment="content">
+    <!-- It will be displayed once the application of the job is submitted by the candidate -->
     <div class="flex flex-col items-center mx-auto border border-light p-6 rounded-md shadow-xl bg-light mt-10 w-80">
         <p class="text-xl font-serif font-bold text-center">You have successfully<br/>submitted your<br>application. </p>
         <a th:href="@{/}" class="mt-3 bg-primary text-base mx-auto p-4 rounded-2xl font-thin
