--- a/synapsis/src/main/resources/templates/pages/updateuserpage.html
+++ b/synapsis/src/main/resources/templates/pages/updateuserpage.html
@@ -19,45 +19,45 @@
 
                 <label>Description</label><br>
                 <textarea id="description" name="description"
-                          class="w-full py-3 px-4 mb-3 h-32 resize-y font-normal tracking-tight text-gray-900 dark:text-white resize-y"
+                          class="w-full py-3 px-4 mb-3 h-32 resize-y font-normal tracking-tight text-gray-900  resize-y"
                           th:text="${profile.description}"></textarea>
                 <br>
                 <label>Education</label><br>
                 <input type="text" id="education" name="education" th:value="${profile.education}"
-                       class="mb-2 text-left   font-normal tracking-tight text-gray-900 dark:text-white"/>
+                       class="mb-2 text-left   font-normal tracking-tight text-gray-900 "/>
                 <br>
                 <label>Skill(s)</label><br>
                 <input type="text" id="skill" name="skill" th:value="${profile.skill}"
-                       class="mb-2 text-left  font-normal tracking-tight text-gray-900 dark:text-white"/>
+                       class="mb-2 text-left  font-normal tracking-tight text-gray-900 "/>
                 <br>
                 <label>Work</label><br>
                 <input type="text" id="work" name="work" th:value="${profile.work}"
-                       class="mb-2 text-left  font-normal tracking-tight text-gray-900 dark:text-white"/>
+                       class="mb-2 text-left  font-normal tracking-tight text-gray-900 "/>
                 <br>
                 <label>Course(s)</label><br>
                 <input type="text" id="course" name="course" th:value="${profile.course}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 dark:text-white"/>
+                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
                 <br>
                 <label>Phone</label><br>
                 <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" th:value="${profile.phone}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 dark:text-white"/>
+                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
                 <br><span class="help-block">Format: 123-456-7890</span><br>
                 <br>
                 <label>Volunteering</label><br>
                 <input type="text" id="volunteering" name="volunteering" th:value="${profile.volunteering}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 dark:text-white"/>
+                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
                 <br>
                 <label>Project(s)</label><br>
                 <input type="text" id="project" name="project" th:value="${profile.project}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 dark:text-white"/>
+                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
                 <br>
                 <label>Award(s)</label><br>
                 <input type="text" id="award" name="award" th:value="${profile.award}"
-                       class="mb-2 text-left font-normal  tracking-tight text-gray-900 dark:text-white"/>
+                       class="mb-2 text-left font-normal  tracking-tight text-gray-900 "/>
                 <br>
                 <label>language(s)</label><br>
                 <input type="text" id="location" name="language" th:value="${profile.language}"
-                       class="mb-2 text-left font-normal tracking-tight text-gray-900 dark:text-white"/>
+                       class="mb-2 text-left font-normal tracking-tight text-gray-900 "/>
                 <br>
                 <button class=" btn bg-red-500 text-white rounded-full" type="submit">Save</button>
             </div>
