--- a/synapsis/src/main/resources/templates/pages/jobApplicationExternal.html
+++ b/synapsis/src/main/resources/templates/pages/jobApplicationExternal.html
@@ -58,12 +58,12 @@
         </div>
 
         <div th:if="${role.toString()=='CANDIDATE'}" class="mx-auto my-4 transition hover:-translate-y-0.5 duration-150 ">
-            <!--Add link below-->
+            <!--Candidates can only apply to jobs.-->
             <a th:href="${external_link}" class="mb-4 bg-primary text-white mx-auto p-4 rounded-2xl font-thin hover:bg-opacity-60">Apply Now Externally</a>
         </div>
 
         <div th:if="${role.toString()=='RECRUITER'}" class="flex mx-auto my-4 space-x-4">
-            <!--Add link below. Only RECRUITERS can edit jobs.-->
+            <!--Only RECRUITERS can edit jobs.-->
             <form th:action="@{/editjob}" th:if="${authorization}" method="get">
                 <input type="hidden" name="jobId" th:value="${jobId}" />
                 <button class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
@@ -74,6 +74,8 @@
                 <button class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
               hover:bg-opacity-60 transition hover:-translate-y-0.5 duration-150" type="submit">Delete</button>
             </form>
+
+            <a th:href="${external_link}" class="mb-4 bg-primary text-white mx-auto p-4 rounded-2xl font-thin hover:bg-opacity-60">Apply Now Externally</a>
         </div>
 
     </div>
