#202 Fix front-end consistency in application form. User can replace their resume when having a default resume.

--- a/synapsis/src/main/resources/templates/pages/jobApplicationForm.html
+++ b/synapsis/src/main/resources/templates/pages/jobApplicationForm.html
@@ -46,7 +46,7 @@
                 <input name="resume" class="w-full text-lg file:h-14 file:text-black-variant file:bg-light file:border-0 file:[border-inline-end-width:1px] file:border-solid file:border-grey text-grey border border-grey rounded-md bg-light focus:outline-none" type="file" accept=".pdf,.docx" required/>
             </div>
             <div th:if="${need_resume} == true and ${default_resume} != null" class="mt-4">
-                <p class="font-thin font-serif text-grey">Upload Resume</p>
+                <p class="font-thin font-serif text-grey">Replace Resume</p>
                 <input name="resume" class="w-full text-lg file:h-14 file:text-black-variant file:bg-light file:border-0 file:[border-inline-end-width:1px] file:border-solid file:border-grey text-grey border border-grey rounded-md bg-light focus:outline-none" type="file" accept=".pdf,.docx"/>
             </div>
 
