--- a/synapsis/src/main/resources/templates/pages/adminMessagesPage.html
+++ b/synapsis/src/main/resources/templates/pages/adminMessagesPage.html
@@ -2,7 +2,13 @@
 <html xmlns:th="http://thymeleaf.org" xmlns:sec="http://www.thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="_layout">
 <div layout:fragment="content">
     <div th:each="messageList: ${listOfListOfMessages}" class="border-solid border-2 rounded-2xl p-[8px] m-[8px]">
-        <p th:each="message: ${messageList}" th:text="${message.content}" th:class="${message.reportStatus.toString() == 'REPORTED'} ? 'text-red-600'" ></p>
+        <div th:each="message: ${messageList}">
+            <th:block th:if="${message.fileName != null and message.file != null}">
+                <img th:if="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:src="${message.file}" th:alt="${message.fileName}" />
+                <a th:unless="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:download="${message.fileName}" th:text="'Download' + ${message.fileName}"></a>
+            </th:block>
+            <p th:text="${message.content}" th:class="${messageList.indexOf(message) + 1 == messageList.size()} ? 'text-red-600'" ></p>
+        </div>
         <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0">Warn</button>
         <button class="btn bg-primary btn-primary font-sans text-sm w-20 h-9 p-0">Ban</button>
     </div>
