--- a/synapsis/src/main/resources/templates/pages/messagingPage.html
+++ b/synapsis/src/main/resources/templates/pages/messagingPage.html
@@ -10,8 +10,14 @@
             </div>
 
             <ul id="messageArea">
-                <li th:each="message: ${messages}" class="flex items-center">
-                    <p th:text="${message.getContent()}"></p>
+                <li th:each="message : ${messages}" class="flex items-center">
+                    <div class="flex flex-col items-start">
+                        <th:block th:if="${message.fileName != null and message.file != null}">
+                            <img th:if="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:src="${message.file}" th:alt="${message.fileName}" />
+                            <a th:unless="${message.fileName.toLowerCase().matches('.*\.(png|jpe?g|gif|bmp)')}" th:download="${message.fileName}" th:text="'Download' + ${message.fileName}"></a>
+                        </th:block>
+                        <p th:text="${message.getContent()}"></p>
+                    </div>
                     <form th:if="${message.getSender().getId() != authenticatedUserID}" th:action="@{/chat/report}" method="POST">
                         <input type="hidden" name="messageID" th:value="${message.getId()}" />
                         <input type="hidden" name="chatID" th:value="${chatId}" />
@@ -25,6 +31,7 @@
                 <input id="sender" class="hidden" th:value="${senderId}"/>
                 <input id="receiver" class="hidden" th:value="${receiverId}"/>
                 <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+                <input type="file" id="file" name="file"/>
                 <button type="submit" class="primary">Send</button>
             </form>
 
