--- a/synapsis/src/main/resources/templates/pages/companypage.html
+++ b/synapsis/src/main/resources/templates/pages/companypage.html
@@ -71,6 +71,11 @@
                     <input type="hidden" name="companyUserId" th:value="${id}" />
                     <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Mark</button>
                 </form>
+
+                <form th:if="${role.toString() == 'COMPANY' and myRole.toString() == 'ADMIN' and verificationStatus == true}" th:action="@{/admin/unverifyCompany}" method="post">
+                    <input type="hidden" name="companyUserId" th:value="${id}" />
+                    <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Unmark</button>
+                </form>
             </div>
         </div>
 
